fixed bug with down arrow overlapping with text

--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -446,6 +446,10 @@ figcaption {
 	text-shadow: 0 0 10px white;
 }
 
+#down-arrow-row {
+	margin-top: 23%;
+}
+
 .cyan-hover:hover {
 	text-shadow: 0 0 10px $primary-color;
 }
